# TurnIt-IDE

./: .gitignore  build.gradle  decode_ide_p1.py  decode_p1_fixes.py  settings.gradle
.github/workflows/: bootstrap-assets.yml  build-payload.yml  build-toolchain-artifact.yml  build-toolchain.yml  build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  engine.cpp
app/src/main/java/com/turnit/ide/: CrashActivity.kt  MainActivity.kt  NativeBridge.kt  TurnItApp.kt
app/src/main/java/com/turnit/ide/ai/: AiChatClient.kt  AiModels.kt
app/src/main/java/com/turnit/ide/auth/: FirebaseAuthManager.kt  TokenAuthenticator.kt  TokenManager.kt
app/src/main/java/com/turnit/ide/engine/: DownloadEngine.kt  ExtractionEngine.kt  ShellEngine.kt
app/src/main/java/com/turnit/ide/ui/: AuthScreen.kt  IdeTheme.kt  LoginScreen.kt  MainShellScreen.kt  SetupScreen.kt
app/src/main/res/drawable/: bg_glass_bubble.xml  bg_neon_input_rotate.xml
